--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "start": "vite start",
     "postinstall": "./update-bangs.sh"
   },
   "devDependencies": {
     "typescript": "~5.8.3",
-    "vite": "^6.2.5",
+    "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.0"
   }
 }
